--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently --prefix-colors \"bgBlue.bold,bgMagenta.bold\" --names \"NEXT,WORKER\" \"next dev\" \"tsx --watch worker.ts\"",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "^6",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.3",
     "ioredis": "^5.8.2",
     "next": "16.0.6",
@@ -23,9 +26,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^8.2.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
-    "prisma": "^7.0.1",
+    "prisma": "^6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
