--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.3",
     "ioredis": "^5.8.2",
+    "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
