--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "ioredis": "^5.8.2",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
+    "next-devtools-mcp": "^0.3.5",
     "react": "19.2.0",
     "react-datepicker": "^8.10.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-select": "^5.10.2",
     "tsx": "^4.21.0",
     "zod": "^4.1.13"
   },
