--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/react-datepicker": "^6.2.0",
+    "@vis.gl/react-google-maps": "^1.7.1",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
