--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^6",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -34,6 +35,7 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "next-devtools-mcp": "^0.3.5",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-datepicker": "^8.10.0",
     "react-day-picker": "^9.12.0",
@@ -49,12 +51,13 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^8.2.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
-    "prisma": "^6",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
