--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - REDIS_URL=${REDIS_URL}
       - NEXT_TELEMETRY_DISABLED=1
       - JWT_SECRET=${JWT_SECRET}
+      - TZ=Asia/Makassar
     depends_on:
       db:
         condition: service_healthy
@@ -33,6 +34,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=${REDIS_URL}
       - NEXT_TELEMETRY_DISABLED=1
+      - TZ=Asia/Makassar
     depends_on:
       db:
         condition: service_healthy
@@ -48,6 +50,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - TZ=Asia/Makassar
     volumes:
       - db_data:/var/lib/postgresql/data
     healthcheck:
@@ -60,6 +63,8 @@ services:
     image: redis:8.0-alpine
     container_name: ep_guard_redis
     restart: always
+    environment:
+      - TZ=Asia/Makassar
     volumes:
       - redis_data:/data
     # No ports exposed to host for security
