--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:https": "concurrently --prefix-colors \"bgBlue.bold,bgMagenta.bold\" --names \"NEXT,WORKER\" \"next dev --experimental-https\" \"tsx --watch worker.ts\"",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "lint": "tsc --noEmit && eslint",
     "postinstall": "prisma generate"
   },
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
@@ -57,8 +59,11 @@
     "concurrently": "^8.2.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
+    "jest": "^30.2.0",
+    "jest-mock-extended": "^4.0.0",
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
