fix(ci): build migration service explicitly in deploy script
This ensures the migration image is rebuilt with the latest schema changes, addressing the issue where migrations were skipped because the service is behind a profile.

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -28,7 +28,7 @@ jobs:
             sed -i "s/{{BUILD_ID}}/$BUILD_ID/g" public/guard/sw.js
 
             echo "== Build new images =="
-            docker compose build
+            docker compose --profile migration build
 
             echo "== Run DB migrations =="
             # Run migration using the dedicated migration service
