Revert to use next standalone

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -40,3 +40,6 @@ jobs:
 
             echo "== Status =="
             docker compose ps
+
+            echo "== Cleanup =="
+            docker image prune -f
