--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     restart: always
     env_file: .env
     ports:
-      - "3000:3000"
+      - "127.0.0.1:3000:3000"
     environment:
       - NEXT_TELEMETRY_DISABLED=1
       - TZ=Asia/Makassar
@@ -58,6 +58,8 @@ services:
 
   db:
     image: postgres:15-alpine
+    ports:
+      - "127.0.0.1:5432:5432"
     container_name: ep_guard_db
     restart: always
     environment:
