--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-hot-toast": "^2.6.0",
     "react-phone-number-input": "^3.4.14",
     "react-select": "^5.10.2",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.21.0",
     "use-debounce": "^10.0.6",
