--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
     "esbuild": "^0.24.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "eslint-plugin-jsonc": "^2.21.0",
     "jest": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
+    "jsonc-eslint-parser": "^2.4.2",
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.6",
