--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,45 +1,49 @@
-name: Deploy to Production (EC2)
+name: Deploy to Production
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            set -e
-            cd ${{ secrets.APP_DIR }}
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-            echo "== Pull latest code =="
-            export GIT_SSH_COMMAND="ssh -i ~/.ssh/github_actions_deploy -o StrictHostKeyChecking=accept-new"
-            git fetch --all
-            git reset --hard origin/main
+    - name: Configure AWS
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-southeast-3
 
-            echo "== Inject Build ID =="
-            export BUILD_ID=$(git rev-parse --short HEAD)
-            sed -i "s/{{BUILD_ID}}/$BUILD_ID/g" public/guard/sw.js
+    - name: Login to ECR
+      run: |
+        aws ecr get-login-password \
+          | docker login \
+            --username AWS \
+            --password-stdin \
+            ${{ secrets.ECR_ACCOUNT_ID }}.dkr.ecr.ap-southeast-3.amazonaws.com
 
-            echo "== Build new images =="
-            docker compose --profile migration build
+    - name: Build & Push Backend
+      run: |
+        IMAGE_TAG=${{ github.sha }}
+        docker build -t guards-backend:$IMAGE_TAG .
+        docker tag guards-backend:$IMAGE_TAG \
+          ${{ secrets.ECR_ACCOUNT_ID }}.dkr.ecr.ap-southeast-3.amazonaws.com/guards-backend:$IMAGE_TAG
+        docker push \
+          ${{ secrets.ECR_ACCOUNT_ID }}.dkr.ecr.ap-southeast-3.amazonaws.com/guards-backend:$IMAGE_TAG
 
-            echo "== Run DB migrations =="
-            # Run migration using the dedicated migration service
-            docker compose run --rm migration
-
-            echo "== Update containers =="
-            # Recreates only changed containers with minimal downtime
-            docker compose up -d
-
-            echo "== Status =="
-            docker compose ps
-
-            echo "== Cleanup =="
-            docker image prune -f
+    - name: Deploy on EC2
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
+          cd /opt/guards
+          sed -i "s|guards-backend:.*|guards-backend:${{ github.sha }}|g" docker-compose.yml
+          docker compose pull
+          docker compose up -d
