deploy-prod.yml

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -2,48 +2,43 @@ name: Deploy to Production
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Configure AWS
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-southeast-3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Login to ECR
-      run: |
-        aws ecr get-login-password \
-          | docker login \
-            --username AWS \
-            --password-stdin \
-            ${{ secrets.ECR_ACCOUNT_ID }}.dkr.ecr.ap-southeast-3.amazonaws.com
+      - name: Login to Amazon ECR
+        run: |
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
+          | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
-    - name: Build & Push Backend
-      run: |
-        IMAGE_TAG=${{ github.sha }}
-        docker build -t guards-backend:$IMAGE_TAG .
-        docker tag guards-backend:$IMAGE_TAG \
-          ${{ secrets.ECR_ACCOUNT_ID }}.dkr.ecr.ap-southeast-3.amazonaws.com/guards-backend:$IMAGE_TAG
-        docker push \
-          ${{ secrets.ECR_ACCOUNT_ID }}.dkr.ecr.ap-southeast-3.amazonaws.com/guards-backend:$IMAGE_TAG
+      - name: Build & Push Backend Image
+        run: |
+          IMAGE_TAG=${{ github.sha }}
+          docker build -t guards-backend:$IMAGE_TAG .
+          docker tag guards-backend:$IMAGE_TAG ${{ secrets.ECR_REGISTRY }}/guards-backend:$IMAGE_TAG
+          docker push ${{ secrets.ECR_REGISTRY }}/guards-backend:$IMAGE_TAG
 
-    - name: Deploy on EC2
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          cd /opt/guards
-          sed -i "s|guards-backend:.*|guards-backend:${{ github.sha }}|g" docker-compose.yml
-          docker compose pull
-          docker compose up -d
+      - name: Deploy on EC2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            set -e
+            cd /opt/guards
+            docker compose pull
+            docker compose up -d
