--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -24,10 +24,10 @@ jobs:
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
           | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
-      - name: Build & Push Backend Image (unique immutable tag)
+      - name: Build & Push Backend Image (correct stage, immutable tag)
         run: |
           IMAGE_TAG=${{ github.sha }}-${{ github.run_id }}
-          docker build -t ${{ secrets.ECR_REGISTRY }}/guards-backend:$IMAGE_TAG .
+          docker build --target app-runner -t ${{ secrets.ECR_REGISTRY }}/guards-backend:$IMAGE_TAG .
           docker push ${{ secrets.ECR_REGISTRY }}/guards-backend:$IMAGE_TAG
 
       - name: Deploy on EC2
