--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -24,11 +24,20 @@ jobs:
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
           | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build & Push Backend Image (correct stage, immutable tag)
-        run: |
-          IMAGE_TAG=${{ github.sha }}-${{ github.run_id }}
-          docker build --target app-runner -t ${{ secrets.ECR_REGISTRY }}/guards-backend:$IMAGE_TAG .
-          docker push ${{ secrets.ECR_REGISTRY }}/guards-backend:$IMAGE_TAG
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          target: app-runner
+          push: true
+          tags: ${{ secrets.ECR_REGISTRY }}/guards-backend:${{ github.sha }}-${{ github.run_id }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }}
 
       - name: Deploy on EC2
         uses: appleboy/ssh-action@v1.0.3
