--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: ${ECR_REGISTRY}/ep-guard:app-${IMAGE_TAG:-latest}
+    image: ${ECR_REGISTRY}/guards-backend:app-${IMAGE_TAG:-latest}
     container_name: ep_guard_app
     restart: always
     env_file: .env
@@ -22,7 +22,7 @@ services:
       start_period: 20s
 
   worker:
-    image: ${ECR_REGISTRY}/ep-guard:worker-${IMAGE_TAG:-latest}
+    image: ${ECR_REGISTRY}/guards-backend:worker-${IMAGE_TAG:-latest}
     container_name: ep_guard_worker
     restart: always
     env_file: .env
@@ -35,7 +35,7 @@ services:
         condition: service_healthy
 
   migration:
-    image: ${ECR_REGISTRY}/ep-guard:migration-${IMAGE_TAG:-latest}
+    image: ${ECR_REGISTRY}/guards-backend:migration-${IMAGE_TAG:-latest}
     container_name: ep_guard_migration
     env_file: .env
     depends_on:
