--- a/.dockerignore
+++ b/.dockerignore
@@ -5,8 +5,18 @@ npm-debug.log
 README.md
 .next
 .git
-.env.local
+.env*
+!.env.example
 .DS_Store
 tests
 dist
 coverage
+
+# Orchestration & CI
+docker-compose*.yml
+.github
+.vscode
+.idea
+*.md
+proxy.ts
+scripts
