--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -24,6 +24,12 @@ jobs:
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
           | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
+      - name: Remove old latest tags from ECR (ignore errors if not found)
+        run: |
+          aws ecr batch-delete-image --region ${{ secrets.AWS_REGION }} --repository-name guards-backend --image-ids imageTag=app-latest || true
+          aws ecr batch-delete-image --region ${{ secrets.AWS_REGION }} --repository-name guards-backend --image-ids imageTag=worker-latest || true
+          aws ecr batch-delete-image --region ${{ secrets.AWS_REGION }} --repository-name guards-backend --image-ids imageTag=migration-latest || true
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
