--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -24,11 +24,26 @@ jobs:
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
           | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
-      - name: Remove old latest tags from ECR (ignore errors if not found)
+      - name: Remove old latest tags from ECR (required for immutable tags)
         run: |
-          aws ecr batch-delete-image --region ${{ secrets.AWS_REGION }} --repository-name guards-backend --image-ids imageTag=app-latest || true
-          aws ecr batch-delete-image --region ${{ secrets.AWS_REGION }} --repository-name guards-backend --image-ids imageTag=worker-latest || true
-          aws ecr batch-delete-image --region ${{ secrets.AWS_REGION }} --repository-name guards-backend --image-ids imageTag=migration-latest || true
+          echo "Removing old latest tags to allow new immutable tags..."
+          aws ecr batch-delete-image \
+            --region ${{ secrets.AWS_REGION }} \
+            --repository-name guards-backend \
+            --image-ids imageTag=app-latest 2>/dev/null || echo "app-latest not found, skipping"
+          
+          aws ecr batch-delete-image \
+            --region ${{ secrets.AWS_REGION }} \
+            --repository-name guards-backend \
+            --image-ids imageTag=worker-latest 2>/dev/null || echo "worker-latest not found, skipping"
+          
+          aws ecr batch-delete-image \
+            --region ${{ secrets.AWS_REGION }} \
+            --repository-name guards-backend \
+            --image-ids imageTag=migration-latest 2>/dev/null || echo "migration-latest not found, skipping"
+          
+          echo "Waiting 2 seconds for ECR to process deletions..."
+          sleep 2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
