--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -24,11 +24,58 @@ jobs:
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
           | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build & Push Backend Image (correct stage, immutable tag)
-        run: |
-          IMAGE_TAG=${{ github.sha }}-${{ github.run_id }}
-          docker build --target app-runner -t ${{ secrets.ECR_REGISTRY }}/guards-backend:$IMAGE_TAG .
-          docker push ${{ secrets.ECR_REGISTRY }}/guards-backend:$IMAGE_TAG
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          target: app-runner
+          push: true
+          tags: |
+            ${{ secrets.ECR_REGISTRY }}/guards-backend:app-${{ github.sha }}-${{ github.run_id }}
+          cache-from: type=gha,scope=app
+          cache-to: type=gha,mode=max,scope=app
+          build-args: |
+            NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }}
+
+      - name: Build & Push Worker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          target: worker-runner
+          push: true
+          tags: |
+            ${{ secrets.ECR_REGISTRY }}/guards-backend:worker-${{ github.sha }}-${{ github.run_id }}
+          # Pull from both app and worker scopes to maximize hits, but only write to worker scope
+          cache-from: |
+            type=gha,scope=app
+            type=gha,scope=worker
+          cache-to: type=gha,mode=min,scope=worker
+
+      - name: Build & Push Migration Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          target: migration-runner
+          push: true
+          tags: |
+            ${{ secrets.ECR_REGISTRY }}/guards-backend:migration-${{ github.sha }}-${{ github.run_id }}
+          # Pull from app scope to get the 'base' layers for free
+          cache-from: |
+            type=gha,scope=app
+            type=gha,scope=migration
+          cache-to: type=gha,mode=min,scope=migration
+
+      - name: Copy docker-compose files to EC2
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "docker-compose.yml"
+          target: "/opt/guards"
 
       - name: Deploy on EC2
         uses: appleboy/ssh-action@v1.0.3
@@ -43,9 +90,25 @@ jobs:
             aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
             | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
-            IMAGE_TAG="${{ github.sha }}-${{ github.run_id }}"
+            # Persist ECR info to .env for manual restarts
+            touch .env
+            sed -i '/^ECR_REGISTRY=/d' .env
+            sed -i '/^IMAGE_TAG=/d' .env
+            echo "ECR_REGISTRY=${{ secrets.ECR_REGISTRY }}" >> .env
+            echo "IMAGE_TAG=${{ github.sha }}-${{ github.run_id }}" >> .env
 
-            sed -i "s|${{ secrets.ECR_REGISTRY }}/guards-backend:.*|${{ secrets.ECR_REGISTRY }}/guards-backend:${IMAGE_TAG}|g" docker-compose.yml
+            # Export variables for the current session
+            export ECR_REGISTRY="${{ secrets.ECR_REGISTRY }}"
+            export IMAGE_TAG="${{ github.sha }}-${{ github.run_id }}"
+            
+            # Pull all images (including those in the migration profile)
+            docker compose --profile migration pull
+            
+            # Run migrations
+            docker compose --profile migration run --rm migration
+            
+            # Update app and worker
+            docker compose up -d --remove-orphans app worker
 
-            docker compose pull
-            docker compose up -d
+            # Clean up old unused images
+            docker image prune -f
