--- a/turbo.json
+++ b/turbo.json
@@ -2,14 +2,14 @@
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "^prisma:generate", "prisma:generate"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
     "lint": {
       "dependsOn": ["^build", "type-check"]
     },
     "type-check": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build", "^prisma:generate", "prisma:generate"]
     },
     "dev": {
       "cache": false,
@@ -20,6 +20,7 @@
       "outputs": ["coverage/**"]
     },
     "prisma:generate": {
+      "dependsOn": ["^prisma:generate"],
       "cache": false
     },
     "db:push": {
