--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,7 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build", "^prisma:generate", "prisma:generate"],
+      "env": ["DATABASE_URL", "NEXT_PUBLIC_GOOGLE_MAPS_API_KEY"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
     "lint": {
