--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,18 +4,40 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/config": "^1.1.20",
+    "@gluestack-ui/themed": "^1.1.73",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/native-stack": "^7.9.0",
     "@repo/shared": "^0.0.0",
     "@repo/types": "^0.0.0",
     "@repo/validations": "^0.0.0",
+    "@tanstack/react-query": "^5.90.16",
+    "axios": "^1.13.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.30",
+    "expo-constants": "^18.0.12",
+    "expo-location": "^19.0.8",
     "expo-status-bar": "~3.0.9",
+    "lucide-react-native": "^0.562.0",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-reanimated": "^4.2.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.19.0",
+    "react-native-svg": "^15.15.1",
+    "react-native-worklets": "^0.7.1",
+    "react-native-worklets-core": "^1.6.2",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
