--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^8.2.2",
     "eslint": "^9",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.19",
     "turbo": "^2.7.3",
     "typescript": "^5"
   }
