--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
     "tailwindcss": "^3.4.19",
     "turbo": "^2.7.3",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
+  },
+  "dependencies": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   }
 }
