--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   ],
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
+    "dev": "node --env-file=.env node_modules/.bin/turbo dev",
     "lint": "turbo lint",
     "test": "turbo test",
-    "postinstall": "turbo run prisma:generate"
+    "postinstall": "node --env-file=.env node_modules/.bin/turbo run prisma:generate"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
@@ -21,13 +21,5 @@
     "tailwindcss": "^3.4.19",
     "turbo": "^2.7.3",
     "typescript": "^5"
-  },
-  "overrides": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
-  },
-  "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
   }
 }
