--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -6,8 +6,8 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "prisma:generate": "prisma generate",
-    "db:push": "prisma db push"
+    "prisma:generate": "node --env-file=../../.env ../../node_modules/.bin/prisma generate",
+    "db:push": "node --env-file=../../.env ../../node_modules/.bin/prisma db push"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
