--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -21,10 +21,16 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.tian_1800.mobile"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "1745481a-0e61-4fe1-ba06-1ac4e9c0deba"
+      }
     }
   }
 }
