--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   ],
   "scripts": {
     "build": "turbo build",
-    "dev": "node --env-file=.env node_modules/.bin/turbo dev",
+    "dev": "node --env-file=.env node_modules/.bin/turbo dev --filter=web --filter=worker",
+    "dev:mobile": "node --env-file=.env node_modules/.bin/turbo dev",
     "lint": "turbo lint",
     "test": "turbo test",
-    "postinstall": "node --env-file=.env node_modules/.bin/turbo run prisma:generate"
+    "postinstall": "if [ -f .env ]; then node --env-file=.env node_modules/.bin/turbo run prisma:generate; else node_modules/.bin/turbo run prisma:generate; fi"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
