--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "@repo/types": "*",
     "@repo/validations": "*",
     "@vis.gl/react-google-maps": "^1.7.1",
+    "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
