--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "better-auth": "^1.4.10",
     "pg": "^8.16.3"
   },
   "devDependencies": {
