--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,6 +13,7 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.20",
     "@gluestack-ui/themed": "^1.1.73",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "@repo/shared": "^0.0.0",
@@ -22,14 +23,18 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.30",
-    "expo-constants": "^18.0.12",
+    "expo": "~54.0.31",
+    "expo-constants": "^18.0.13",
+    "expo-localization": "^17.0.8",
     "expo-location": "^19.0.8",
     "expo-status-bar": "~3.0.9",
+    "i18next": "^25.7.4",
+    "intl-pluralrules": "^2.0.1",
     "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.5.1",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
