--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobile",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "dev": "expo start",
@@ -25,8 +25,10 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.31",
     "expo-constants": "^18.0.13",
+    "expo-linking": "^8.0.11",
     "expo-localization": "^17.0.8",
     "expo-location": "^19.0.8",
+    "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
     "i18next": "^25.7.4",
     "intl-pluralrules": "^2.0.1",
