--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "tsx server.ts",
+    "next-dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production tsx server.ts",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "type-check": "tsc --noEmit"
   },
@@ -26,9 +27,12 @@
     "@repo/shared": "*",
     "@repo/types": "*",
     "@repo/validations": "*",
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@types/cookie": "^0.6.0",
     "@vis.gl/react-google-maps": "^1.7.1",
     "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
+    "cookie": "^0.7.2",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.3",
@@ -47,6 +51,7 @@
     "react-phone-number-input": "^3.4.14",
     "react-select": "^5.10.2",
     "sharp": "^0.34.5",
+    "socket.io": "^4.8.3",
     "use-debounce": "^10.0.6",
     "vaul": "^1.1.2"
   },
@@ -64,6 +69,7 @@
     "eslint-plugin-only-warn": "^1.1.0",
     "prettier": "^3.7.4",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0"
   }
 }
