--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,7 +7,9 @@
     "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@gluestack-style/react": "^1.0.57",
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.10",
+    "eslint-config-expo": "^10.0.0",
     "typescript": "~5.9.2"
   },
   "private": true
