--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -46,6 +46,7 @@
     "react-native-svg": "15.12.1",
     "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19"
   },
