--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
     "react-select": "^5.10.2",
     "sharp": "^0.34.5",
     "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "use-debounce": "^10.0.6",
     "vaul": "^1.1.2"
   },
